[package]
name = "pl_qin"
version = "1.0.0"
authors = ["qinjb"]
build = "build.rs"
edition = "2018"
[lib]
name = "pl_qin"
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libc="0.2.71"
#geodesic = {version="0.1",extern = "D:/ruby-lab/kml/rust-geodesic-master"}
serde = { version = "1.0.113", features = ["derive"] }
serde_derive = "1.0.113"
serde_json = "1.0.55"
lazy_static="1.0"
[build-dependencies]
cc = "1.0"
#bindgen="0.54.1"



